Modified for debug purposes

--- a/seage.css
+++ b/seage.css
@@ -85,7 +85,9 @@ hr {
 }
 
 
-
+div{
+	border:1px solid blue;
+}
 
 
 /* --------------------------------------------------------------------------------------------------------- */
