--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	font-family: "Verdana CE", Verdana, "Arial CE", Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
 	color: #000;
-	text-align: center;
+	text-align: left;
 }
 
 
@@ -35,7 +35,7 @@ h1 {
 	margin: 0px;
 	padding: 0px;
 	width: 160px;
-	height: 160px;
+	height: 150px;
 	font-size: 5px;
 	background-image: URL('./images/logo.png');
 	background-position: left top;
@@ -165,7 +165,9 @@ hr {
 
 		
 		
-		
+#publications{
+	text-align: left;
+}	
 /* --------------------------------------------------------------------------------------------------------- */
 
 
